# openaq-ingestor

./: .gitignore  README.md  benchmark.py  check.py  local.py  matching_clarity_sensors.sql  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: deploy-prod.yml  deploy.yml
cdk/: app.py  cdk.json  config.py  lambda_ingest_stack.py  utils.py
ingest/: README.md  context.py  etl_process_measurements.sql  etl_process_nodes.sql  fetch.py  fetch_ingest_full.sql  fetch_staging.sql  handler.py  lcs.py  lcsV2.py  lcs_ingest_full.sql  lcs_ingest_versions.sql  lcs_ingest_versions_batch_error.sql  lcs_meas_ingest.sql  lcs_meas_staging.sql  lcs_staging.sql  models.py  resources.py  settings.py  temp_locations_dump.sql  temp_measurements_dump.sql  utils.py
tests/: README.md  benchmark.py  benchmarking.r  check.py  check_handler.py  check_lcs_file.py  conftest.py  dataV2.json  scratch.py  test_cronhandler_integration.py  test_cronhandler_unit.py  test_file1.json  test_file2.json  test_flags.py  test_handler_integration.py  test_lcsv2.py  test_lcsv2_data_validation.py  test_lcsv2_integration.py  test_lcsv2_scenarios.py  test_load_fetchlogs.py  test_models.py  test_utils_error_handling.py  test_utils_queries.py  test_utils_s3.py  testdata_lcs_clarity.json  testdata_lcs_senstate.csv  testdata_realtime_measures.ndjson  testdata_transform.json  unsupported_data.tab
