[tool.poetry]
name = "ingest"
version = "0.1.0"
description = "Data ingestor for OpenAQ Framework"
authors = ["OpenAQ <info@openaq.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dateparser = "^1.2.0"
orjson = "^3.10.4"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
typer = "^0.12.3"
typing-extensions = "^4.12.2"
pydantic = {extras = ["dotenv"], version = "^2.7.3"}
pydantic-settings = "^2.3.2"


[tool.poetry.group.cdk.dependencies]
aws-cdk-lib = "^2.145.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
