[tool.poetry]
name = "ingest"
version = "0.1.0"
description = "Data ingestor for OpenAQ Framework"
authors = ["OpenAQ <info@openaq.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dateparser = "^1.2.0"
orjson = "^3.10.4"
psycopg2-binary = "^2.9.9"
pytz = "^2024.1"
typer = "^0.12.3"
typing-extensions = "^4.12.2"
pydantic = {extras = ["dotenv"], version = "^2.7.3"}
pydantic-settings = "^2.3.2"

[tool.poetry.group.cdk.dependencies]
aws-cdk-lib = "^2.145.0"
boto3 = "^1.34.124"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-env = "^1.1.5"
moto = {extras = ["s3"], version = "^5.0.0"}
pytest-mock = "^3.14.0"
pytest-cov = "^4.1.0"
freezegun = "^1.5.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: Integration tests requiring database",
    "s3: Tests requiring S3 mocking",
]

log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
